# pg-ferret

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.all-in-one  Dockerfile.base  Dockerfile.mac  Dockerfile.test  LICENCE  README.md  build-postgres.sh  ci-build-postgres.sh  docker-compose.yml  grafana.ini  start.sh  symbols.Dockerfile  tempo-datasource.yaml  tempo.yaml
.github/workflows/: build.yml  test.yml
apps/: .dockerignore  Cargo.toml
apps/kernelspace-ebpf-tracer/: Cargo.toml  build.rs  rust-toolchain.toml
apps/kernelspace-ebpf-tracer/src/: hooks.rs  main.rs
apps/shared/: Cargo.toml
apps/shared/src/: lib.rs  postgres_funcs.rs
apps/userspace-collector/: Cargo.toml
apps/userspace-collector/src/: bpf.rs  generated.rs  main.rs  metrics.rs  receive.rs  tracing.rs
apps/xtask/src/: build_ebpf.rs  run.rs
examples/all-in-one/: docker-compose.yml
examples/honeycomb/: docker-compose.yml
packaging/all-in-one/: Dockerfile  start.sh  tempo-datasource.yaml  tempo.yaml
packaging/base/: Dockerfile
packaging/slim/: start.sh  tempo-datasource.yaml
postgres/: .dockerignore  Dockerfile.builder  bench.sh  build-postgres.sh  build.sh  init-pg.sh  log.txt  postgres.conf
