[package]
name = "userspace-collector"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
pg-ferret-shared = { path = "../shared", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
object = "0.35.0"
bytes = "1.6.0"
opentelemetry = { version = "0.23", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-stdout = { version = "0.4", features = ["trace", "metrics"] }
opentelemetry-otlp = "0.16.0"
opentelemetry-semantic-conventions = "0.15.0"
rand = "0.8.5"
regex = "1.10.4"
serde_json = "1.0.117"
warp = "0.3.7"
opentelemetry-prometheus = "0.16.0"
prometheus = "0.13.4"
hyper = { version = "1.3.1", features = ["full"] }
once_cell = "1.19.0"
http-body-util = "0.1.1"
lazy_static = "1.4.0"
axum = "0.7.5"

[[bin]]
name = "userspace-collector"
path = "src/main.rs"
